@@ -1,3 +1,12 @@
+2009-09-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	PR/41315
+	* config/i386.c (ix86_can_use_return_insn_p): Check for
+	padding0, too.
+	(ix86_expand_prologue): Take frame.padding0 into logic of
+	to_allocate checks.
+	(ix86_expand_epilogue): Likewise.
+
 2009-09-07  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
